# EFEAR-4D

./: CMakeLists.txt  README.md  package.xml
config/: params_msc.yaml  params_ntu.yaml
include/: utility.h
include/dbscan/: DBSCAN_simple.h
include/efear/: n_scan_normal.h  pointnormal.h  registration.h  utils.h  voxelgrid.h
include/fast_dbscan/: Fastdbscan.h
launch/: run.launch  test.rviz
msg/: cloud_msgs.msg
src/: PreProcessing.cpp  ScanMatching.cpp
src/efear/: n_scan_normal.cpp  pointnormal.cpp  registration.cpp  utils.cpp  voxelgrid.cpp
